--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "migrate:dev": "knex migrate:latest",
     "rollback:dev": "knex migrate:rollback",
     "seed:dev": "knex seed:run",
-    "migrate:prod": "heroku run knex migrate:latest -a YOUR_HEROKU_APP_NAME",
-    "rollback:prod": "heroku run knex migrate:rollback -a YOUR_HEROKU_APP_NAME",
-    "database:prod": "heroku pg:psql -a YOUR_HEROKU_APP_NAME",
-    "seed:prod": "heroku run knex seed:run -a YOUR_HEROKU_APP_NAME",
+    "migrate:prod": "heroku run knex migrate:latest -a backend-salsacolombia",
+    "rollback:prod": "heroku run knex migrate:rollback -a backend-salsacolombia",
+    "database:prod": "heroku pg:psql -a backend-salsacolombia",
+    "seed:prod": "heroku run knex seed:run -a backend-salsacolombia",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "deploy": "git push heroku main"
   },
